# forthic-py

./: .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md  example.py  pyproject.toml
docs/: index.md  module-loading.md
docs/modules/: array.md  boolean.md  core.md  datetime.md  math.md  pandas.md  record.md  string.md
examples/: __init__.py  dynamic_module_example.py  example_modules_config.yaml
forthic/: __init__.py  errors.py  interpreter.py  literals.py  module.py  tokenizer.py  utils.py  word_options.py
forthic/decorators/: __init__.py  word.py
forthic/grpc/: __init__.py  client.py  errors.py  forthic_runtime_pb2.py  forthic_runtime_pb2.pyi  forthic_runtime_pb2_grpc.py  module_loader.py  remote_module.py  remote_runtime_module.py  remote_word.py  runtime_manager.py  serializer.py  server.py
forthic/modules/: __init__.py  array_module.py  boolean_module.py  core_module.py  datetime_module.py  json_module.py  math_module.py  pandas_module.py  record_module.py  string_module.py
forthic/modules/standard/: __init__.py  array_module.py  boolean_module.py  core_module.py  datetime_module.py  json_module.py  math_module.py  record_module.py  string_module.py
scripts/: README.md  __init__.py  fix_grpc_imports.py  generate_docs.py  generate_grpc.sh
tests/: __init__.py
tests/integration/: test_dot_symbol.py  test_example_module_loading.py  test_interpreter_complete.py  test_phase11_9_standard_interpreter_integration.py  test_server_config.py  test_standard_interpreter.py
tests/unit/core/: test_decorators.py  test_error.py  test_interpreter.py  test_literals.py  test_options.py  test_tokenizer.py  test_utils.py  test_word_error_handler.py  test_zoned_datetime_literals.py
tests/unit/grpc/: __init__.py  test_client.py  test_module_loader.py  test_remote_module.py  test_remote_runtime_module.py  test_remote_word.py  test_runtime_manager.py
tests/unit/modules/: test_boolean_module.py  test_example_module.py  test_json_module.py  test_pandas_module.py  test_string_module.py
tests/unit/modules/standard/: test_array_module.py  test_core_module.py  test_datetime_module.py  test_math_module.py  test_record_module.py
